[gd_scene load_steps=20 format=4 uid="uid://bcie26b6i36hi"]

[ext_resource type="Script" path="res://Scripts/Screens/Main_Menu.gd" id="1_hn81m"]
[ext_resource type="StyleBox" uid="uid://ds6e7e74jve5k" path="res://Resources/Themes/Menu_Panel.tres" id="2_8p8b5"]
[ext_resource type="Script" path="res://Scripts/Data/settings.gd" id="2_ays27"]
[ext_resource type="Theme" uid="uid://2cwwdidf6lxu" path="res://Resources/Themes/Menu_Button.tres" id="2_dwqv4"]
[ext_resource type="Theme" uid="uid://dchsfnmpldp4" path="res://Resources/Themes/Menu_Button_Bold.tres" id="2_fnvt1"]
[ext_resource type="PackedScene" uid="uid://bgw6bnk7htssx" path="res://Scenes/Interaction/Cursor.tscn" id="4_3s6pt"]
[ext_resource type="FontFile" uid="uid://cfo2qxhjgnl1q" path="res://Resources/Themes/PixelOperator8.ttf" id="5_j2qoi"]
[ext_resource type="TileSet" uid="uid://6vvuli8mgkii" path="res://Resources/Tiles/Ground.tres" id="8_glreq"]
[ext_resource type="TileSet" uid="uid://dq2wv65dkypvo" path="res://Resources/Tiles/Obstacles.tres" id="9_8hxlb"]
[ext_resource type="Texture2D" uid="uid://bcau2wpp45poi" path="res://Resources/Sprites/Bag.png" id="10_yrkcy"]
[ext_resource type="Texture2D" uid="uid://bvqg1vsn1xudn" path="res://Resources/Sprites/BG.png" id="11_o4mmh"]

[sub_resource type="Theme" id="Theme_18mgh"]
Label/fonts/font = null

[sub_resource type="AtlasTexture" id="AtlasTexture_3tgww"]
atlas = ExtResource("10_yrkcy")
region = Rect2(0, 0, 80, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_7vdxx"]
atlas = ExtResource("10_yrkcy")
region = Rect2(240, 0, 80, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_67g5u"]
atlas = ExtResource("10_yrkcy")
region = Rect2(0, 0, 80, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_82qyn"]
atlas = ExtResource("10_yrkcy")
region = Rect2(80, 0, 80, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_c4w18"]
atlas = ExtResource("10_yrkcy")
region = Rect2(0, 0, 80, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_j4ikc"]
atlas = ExtResource("10_yrkcy")
region = Rect2(160, 0, 80, 96)

[sub_resource type="SpriteFrames" id="SpriteFrames_v00yj"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3tgww")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7vdxx")
}],
"loop": false,
"name": &"credits",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_67g5u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_82qyn")
}],
"loop": false,
"name": &"middle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_c4w18")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j4ikc")
}],
"loop": false,
"name": &"top",
"speed": 10.0
}]

[node name="Main" type="Node2D"]
script = ExtResource("1_hn81m")

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="."]
offset_top = 413.0
offset_right = 640.0
offset_bottom = 463.0
scale = Vector2(3, 3)
focus_mode = 2
ratio = 2.5

[node name="Play" type="Button" parent="AspectRatioContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme = ExtResource("2_dwqv4")
action_mode = 0
text = "Play"
flat = true

[node name="AspectRatioContainer2" type="AspectRatioContainer" parent="."]
offset_top = 764.0
offset_right = 960.0
offset_bottom = 814.0
scale = Vector2(2, 2)
ratio = 2.5

[node name="Settings" type="Button" parent="AspectRatioContainer2"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme = ExtResource("2_dwqv4")
action_mode = 0
text = "Settings"
flat = true

[node name="AspectRatioContainer3" type="AspectRatioContainer" parent="."]
offset_top = 609.0
offset_right = 960.0
offset_bottom = 659.0
scale = Vector2(2, 2)
ratio = 2.5

[node name="Quit" type="Button" parent="AspectRatioContainer3"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme = ExtResource("2_dwqv4")
action_mode = 0
text = "Quit
"
flat = true

[node name="Settings" type="PanelContainer" parent="."]
visible = false
z_index = 1
offset_left = 240.0
offset_top = 135.0
offset_right = 1680.0
offset_bottom = 945.0
theme_override_styles/panel = ExtResource("2_8p8b5")
script = ExtResource("2_ays27")

[node name="TabContainer" type="TabContainer" parent="Settings"]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_j2qoi")
tab_alignment = 1
current_tab = 0

[node name="General" type="TabBar" parent="Settings/TabContainer"]
layout_mode = 2
theme = ExtResource("2_fnvt1")
metadata/_tab_index = 0

[node name="MarginContainer" type="MarginContainer" parent="Settings/TabContainer/General"]
layout_mode = 0
offset_left = 20.0
offset_top = 2.0
offset_right = 1420.0
offset_bottom = 54.0

[node name="VBoxContainer" type="VBoxContainer" parent="Settings/TabContainer/General/MarginContainer"]
layout_mode = 2

[node name="Score Reset" type="Button" parent="Settings/TabContainer/General/MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme = ExtResource("2_dwqv4")
action_mode = 0
text = "Reset Score Data"

[node name="Tutorials" type="CheckBox" parent="Settings/TabContainer/General/MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme = ExtResource("2_dwqv4")
action_mode = 0
text = "Tutorial Messages
"
alignment = 1

[node name="Video" type="TabBar" parent="Settings/TabContainer"]
visible = false
layout_mode = 2
theme = ExtResource("2_fnvt1")
metadata/_tab_index = 1

[node name="MarginContainer" type="MarginContainer" parent="Settings/TabContainer/Video"]
layout_mode = 0
offset_left = 20.0
offset_right = 1420.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="Settings/TabContainer/Video/MarginContainer"]
layout_mode = 2

[node name="Fullscreen" type="OptionButton" parent="Settings/TabContainer/Video/MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
alignment = 1
selected = 0
item_count = 2
popup/item_0/text = "Windowed"
popup/item_1/text = "Fullscreen"
popup/item_1/id = 1

[node name="HSplitContainer" type="HSplitContainer" parent="Settings/TabContainer/Video/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
dragger_visibility = 2

[node name="Label" type="Label" parent="Settings/TabContainer/Video/MarginContainer/VBoxContainer/HSplitContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme = SubResource("Theme_18mgh")
text = "Resolution:"

[node name="Resolution" type="OptionButton" parent="Settings/TabContainer/Video/MarginContainer/VBoxContainer/HSplitContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
selected = 1
item_count = 4
popup/item_0/text = " 854x480"
popup/item_1/text = "1280x720"
popup/item_1/id = 1
popup/item_2/text = "1920x1080"
popup/item_2/id = 2
popup/item_3/text = "2560x1440"
popup/item_3/id = 3

[node name="Audio" type="TabBar" parent="Settings/TabContainer"]
visible = false
layout_mode = 2
theme = ExtResource("2_fnvt1")
metadata/_tab_index = 2

[node name="Accessibility" type="TabBar" parent="Settings/TabContainer"]
visible = false
layout_mode = 2
theme = ExtResource("2_fnvt1")
metadata/_tab_index = 3

[node name="MarginContainer" type="MarginContainer" parent="Settings/TabContainer/Accessibility"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Text Size" type="OptionButton" parent="Settings/TabContainer/Accessibility"]
layout_mode = 2
offset_right = 198.0
offset_bottom = 40.0
mouse_default_cursor_shape = 2
selected = 0
item_count = 3
popup/item_0/text = "Normal"
popup/item_1/text = "Large"
popup/item_1/id = 1
popup/item_2/text = "Extra Large"
popup/item_2/id = 2

[node name="PanelContainer" type="PanelContainer" parent="."]
visible = false
z_index = 1
offset_left = 1367.0
offset_top = 79.0
offset_right = 1655.0
offset_bottom = 135.0
theme_override_styles/panel = ExtResource("2_8p8b5")

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer"]
layout_mode = 2
alignment = 1

[node name="Save" type="Button" parent="PanelContainer/HBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme = ExtResource("2_dwqv4")
action_mode = 0
text = "Save"

[node name="Apply" type="Button" parent="PanelContainer/HBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme = ExtResource("2_dwqv4")
action_mode = 0
text = "Apply"

[node name="Close" type="Button" parent="PanelContainer/HBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme = ExtResource("2_dwqv4")
action_mode = 0
text = "Close"

[node name="Cursor" parent="." instance=ExtResource("4_3s6pt")]
z_index = 6
position = Vector2(1222, 926)

[node name="Ground" type="TileMapLayer" parent="."]
z_index = -1
position = Vector2(-192, 16)
scale = Vector2(4, 4)
tile_set = ExtResource("8_glreq")
collision_visibility_mode = 1

[node name="Obstacles" type="TileMapLayer" parent="."]
scale = Vector2(4, 4)
tile_map_data = PackedByteArray("AAAAAP//AAAAAAAAAAABAP//AAAAAAAAAAACAP//AAAAAAAAAAADAP//AAAAAAAAAAAEAP//AAAAAAAAAAAFAP//AAAAAAAAAAAGAP//AAAAAAAAAAAHAP//AAAAAAAAAAAIAP//AAAAAAAAAAAJAP//AAAAAAAAAAAKAP//AAAAAAAAAAD//wYAAAAAAAAAAAD//wUAAAAAAAAAAAD//wQAAAAAAAAAAAD//wMAAAAAAAAAAAD//wIAAAAAAAAAAAD//wEAAAAAAAAAAAD//wAAAAAAAAAAAAD/////AAAAAAAAAAD//wcAAAAAAAAAAAD//wgAAAAAAAAAAAAPAAgAAAAAAAAAAAAPAAcAAAAAAAAAAAAPAAYAAAAAAAAAAAAPAAUAAAAAAAAAAAAPAAQAAAAAAAAAAAAPAAMAAAAAAAAAAAAPAAIAAAAAAAAAAAAPAAEAAAAAAAAAAAAPAAAAAAAAAAAAAAAPAP//AAAAAAAAAAAOAP//AAAAAAAAAAANAP//AAAAAAAAAAAMAP//AAAAAAAAAAALAP//AAAAAAAAAAAAAAEAAAABAAAAAAAAAAIAAAABAAAAAAAAAAMAAAABAAAAAAAAAAQAAAABAAAAAAAAAAUAAAABAAAAAAAAAAYAAAABAAAAAAAAAAcAAAABAAAAAAAOAAcAAAABAAAAABAOAAYAAAABAAAAABAOAAUAAAABAAAAABAOAAQAAAABAAAAABAOAAMAAAABAAAAABAOAAIAAAABAAAAABAOAAEAAAABAAAAABAOAAAAAAABAAAAADAAAAAAAAABAAAAAAAAAAgAAAACAAEAAAAOAAgAAAACAAEAABA=")
tile_set = ExtResource("9_8hxlb")
navigation_enabled = false

[node name="AspectRatioContainer4" type="AspectRatioContainer" parent="."]
offset_left = 164.0
offset_top = 898.0
offset_right = 464.0
offset_bottom = 938.0
scale = Vector2(1.75, 1.75)

[node name="Credits" type="Button" parent="AspectRatioContainer4"]
layout_mode = 2
theme = ExtResource("2_dwqv4")
text = "Credits"
flat = true

[node name="BG" type="Node2D" parent="."]

[node name="Bag" type="AnimatedSprite2D" parent="BG"]
z_index = -1
position = Vector2(927, 549)
scale = Vector2(10, 10)
sprite_frames = SubResource("SpriteFrames_v00yj")
animation = &"credits"

[node name="Sprite2D" type="Sprite2D" parent="BG"]
z_index = -2
position = Vector2(960, 518)
scale = Vector2(10, 10)
texture = ExtResource("11_o4mmh")

[connection signal="settings_data" from="." to="Settings" method="_on_main_settings_data"]
[connection signal="mouse_entered" from="AspectRatioContainer/Play" to="." method="_on_play_mouse_entered"]
[connection signal="mouse_exited" from="AspectRatioContainer/Play" to="." method="_on_play_mouse_exited"]
[connection signal="pressed" from="AspectRatioContainer/Play" to="." method="_on_button_pressed"]
[connection signal="mouse_entered" from="AspectRatioContainer2/Settings" to="." method="_on_settings_mouse_entered"]
[connection signal="mouse_exited" from="AspectRatioContainer2/Settings" to="." method="_on_settings_mouse_exited"]
[connection signal="pressed" from="AspectRatioContainer2/Settings" to="." method="_on_button2_pressed"]
[connection signal="mouse_entered" from="AspectRatioContainer3/Quit" to="." method="_on_quit_mouse_entered"]
[connection signal="mouse_exited" from="AspectRatioContainer3/Quit" to="." method="_on_quit_mouse_exited"]
[connection signal="pressed" from="AspectRatioContainer3/Quit" to="." method="_on_button3_pressed"]
[connection signal="pressed" from="Settings/TabContainer/General/MarginContainer/VBoxContainer/Score Reset" to="." method="scoreReset"]
[connection signal="toggled" from="Settings/TabContainer/General/MarginContainer/VBoxContainer/Tutorials" to="Settings" method="_on_tutorials_toggled"]
[connection signal="item_selected" from="Settings/TabContainer/Video/MarginContainer/VBoxContainer/Fullscreen" to="Settings" method="_on_Fullscreen_item_selected"]
[connection signal="item_selected" from="Settings/TabContainer/Video/MarginContainer/VBoxContainer/HSplitContainer/Resolution" to="Settings" method="_on_resolution_item_selected"]
[connection signal="item_selected" from="Settings/TabContainer/Accessibility/Text Size" to="Settings" method="_on_text_size_item_selected"]
[connection signal="pressed" from="PanelContainer/HBoxContainer/Save" to="Settings" method="_on_save_pressed"]
[connection signal="pressed" from="PanelContainer/HBoxContainer/Apply" to="Settings" method="_on_apply_pressed"]
[connection signal="pressed" from="PanelContainer/HBoxContainer/Close" to="Settings" method="_on_close_pressed"]
[connection signal="pressed" from="AspectRatioContainer4/Credits" to="." method="_on_credits_pressed"]
